--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 .head {font-size:40px;
 text-align: center;
 }
@@ -21,4 +23,6 @@ text-align: center;
     text-align: center;
 }
 
-body {background-color: rgb(111, 230, 111)}
+body {background-color: rgb(111, 230, 111);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
