--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ text-align: center;
 
 .sb {
     font-size: 25px;
-    background-color: yellow;
+    background-color: rgb(255, 255, 78);
     text-align: center;
 }
 
