--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ text-align: center;
 
 .pizza {
     font-size: 25px;
-    background-color: red;
+    background-color: rgb(238, 50, 50);
     text-align: center;
 }
 
