--- a/style.css
+++ b/style.css
@@ -1,13 +1,40 @@
+html {box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {background-color: rgb(111, 230, 111);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 
-.head {font-size:40px;
-text-align: center;
+.head {
+    text-align: center;
+    font-size:60px;
+    font-weight: bold;
+    border: 4px, solid, black;
+    padding: 10px;
+    width: 500px;
+    margin:auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    color:rgb(0, 0, 0);
+    background-color: aqua;
 }
 
 
 .pizza {
     font-size: 25px;
     background-color: rgb(238, 50, 50);
+    margin:auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 200px;
+    padding: 8px;
+    border: 3px, solid, white;
     text-align: center;
 }
 
@@ -15,14 +42,23 @@ text-align: center;
     font-size: 25px;
     background-color: rgb(224, 96, 10);
     text-align: center;
+    margin:auto;
+    margin-top: 1em;
+    width:220px;
+    margin: bottom 1em;
+    padding:6px;
+    border: 3px, solid, white;
 }
 
 .sb {
+    text-align:right;
     font-size: 25px;
     background-color: rgb(255, 255, 78);
     text-align: center;
+    margin:auto;
+    margin-top:1em;
+    width: 270px;
+    padding:6px;
+    border: 3px, solid, white;
 }
 
-body {background-color: rgb(111, 230, 111);
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
