--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-html {box-sizing: border-box;
+html {
+    box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
 
-body {background-color: rgb(111, 230, 111);
+body {
+    background-color: rgb(111, 230, 111);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 
 .head {
     text-align: center;
@@ -25,40 +27,32 @@ body {background-color: rgb(111, 230, 111);
     background-color: aqua;
 }
 
-
-.pizza {
+p {
     font-size: 25px;
-    background-color: rgb(238, 50, 50);
-    margin:auto;
+    max-width: 270px;
+    margin: auto;
     margin-top: 1em;
     margin-bottom: 1em;
-    width: 200px;
-    padding: 8px;
-    border: 3px, solid, white;
+    padding:8px;
+    border:3px, solid, white;
     text-align: center;
+}
+
+
+.pizza {
+    background-color: rgb(238, 50, 50);
+    position: relative;
+    right: 113px;
 }
 
 .chilli {
-    font-size: 25px;
     background-color: rgb(224, 96, 10);
-    text-align: center;
-    margin:auto;
-    margin-top: 1em;
-    width:220px;
-    margin: bottom 1em;
-    padding:6px;
-    border: 3px, solid, white;
+    position:relative
 }
 
 .sb {
-    text-align:right;
-    font-size: 25px;
     background-color: rgb(255, 255, 78);
-    text-align: center;
-    margin:auto;
-    margin-top:1em;
-    width: 270px;
-    padding:6px;
-    border: 3px, solid, white;
+    position: relative;
+    left: 113px;
 }
 
